add manual structure and example Rdata

--- a/R/NaraR/DESCRIPTION
+++ b/R/NaraR/DESCRIPTION
@@ -6,4 +6,4 @@ Date: 2012-12-01
 Author: Lin, Cheng-Tao
 Maintainer: Lin, Cheng-Tao <mutolisp@gmail.com>
 Description: Just a simple assessment tool 
-License: GNU GPL v3
+License: New BSD License
